force-app/main/default/objects/BulkTest__c/BulkTest__c.object-meta.xml
<CustomObject>
    <label>BulkTest</label>
    <nameField>
        <label>BulkTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BulkTest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>