force-app/main/default/objects/BulkTest__c/fields/callback__c.field-meta.xml
<CustomField>
    <fullName>callback__c</fullName>
    <label>callback</label>
    <length>20</length>
    <type>Text</type>
</CustomField>