force-app/main/default/objects/BulkTest__c/fields/content__c.field-meta.xml
<CustomField>
    <fullName>content__c</fullName>
    <label>content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>