force-app/main/default/objects/BulkTest__c/fields/date_client_req__c.field-meta.xml
<CustomField>
    <fullName>date_client_req__c</fullName>
    <label>date_client_req</label>
    <length>20</length>
    <type>Text</type>
</CustomField>