force-app/main/default/objects/BulkTest__c/fields/ifAggregation__c.field-meta.xml
<CustomField>
    <fullName>ifAggregation__c</fullName>
    <description>분할전송시 전체 데이터 Set을 식별하기위한 Unique Key</description>
    <label>ifAggregation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>