force-app/main/default/objects/BulkTest__c/fields/ifSplitCnt__c.field-meta.xml
<CustomField>
    <fullName>ifSplitCnt__c</fullName>
    <description>분할 전송 총 횟수</description>
    <label>ifSplitCnt</label>
    <length>10</length>
    <type>Text</type>
</CustomField>