force-app/main/default/objects/BulkTest__c/fields/ifSplitSeq__c.field-meta.xml
<CustomField>
    <fullName>ifSplitSeq__c</fullName>
    <description>현재 전송되는 분할의 일련번호 (1 부터 1씩 증가)</description>
    <label>ifSplitSeq</label>
    <length>10</length>
    <type>Text</type>
</CustomField>