force-app/main/default/objects/BulkTest__c/fields/ifTotCnt__c.field-meta.xml
<CustomField>
    <fullName>ifTotCnt__c</fullName>
    <description>전송 대상 전체 데이터 건수(분할 전송시에는 분할 전 전체 데이터 건수)</description>
    <label>ifTotCnt</label>
    <length>10</length>
    <type>Text</type>
</CustomField>