force-app/main/default/objects/BulkTest__c/fields/msg_status__c.field-meta.xml
<CustomField>
    <fullName>msg_status__c</fullName>
    <label>msg_status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>