force-app/main/default/objects/BulkTest__c/fields/mt_pr__c.field-meta.xml
<CustomField>
    <fullName>mt_pr__c</fullName>
    <label>mt_pr</label>
    <length>10</length>
    <type>Text</type>
</CustomField>