force-app/main/default/objects/BulkTest__c/fields/mt_seq__c.field-meta.xml
<CustomField>
    <fullName>mt_seq__c</fullName>
    <label>mt_seq</label>
    <length>10</length>
    <type>Text</type>
</CustomField>