force-app/main/default/objects/BulkTest__c/fields/recipient_num__c.field-meta.xml
<CustomField>
    <fullName>recipient_num__c</fullName>
    <label>recipient_num</label>
    <length>20</length>
    <type>Text</type>
</CustomField>